# f5-ai-gateway-sdk-py

./: .gitignore  .tool-versions  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/data/: Dockerfile
.github/workflows/: ci.yml  f5-cla.yml  linters.yml  scanners.yml
src/f5_ai_gateway_sdk/: __init__.py  errors.py  multipart_fields.py  multipart_response.py  parameters.py  processor.py  processor_routes.py  quieter_batch_processor.py  request_input.py  response_output.py  result.py  signature.py  sysinfo.py  tags.py  type_hints.py
tests/: README.md  config  conftest.py  multipart_decoder_helper.py  test_aigw_input.py  test_aigw_response.py  test_multipart_fields.py  test_multipart_response.py  test_of_tests.py  test_parameters.py  test_processor.py  test_processor_routes.py  test_request_input.py  test_result.py  test_signature.py  test_sysinfo.py  test_tags.py
tests/contract/: __init__.py  test_processor_exchanges.py  test_processor_routes_exchanges.py
tests/contract/data/: empty_processor_routes.html  empty_processor_routes.json  good_judgy_parameters.yaml  judgy_parameters.yaml
tests/data/: fake_routes_html.txt  hello_world.cfg  malformed_metadata_body.txt  multipart_response_metadata.json  multipart_response_metadata_processor_rejected.yaml  processor_as_dict.yaml  simple_metadata_response.json
tests/libs/: __init__.py  config.py  exceptions.py  logs.py  naughty_strings.py
tests/libs/fakes/: processors.py
tests/libs/filesystem/: __init__.py  decoders.py  locations.py
tests/libs/protocols/: __init__.py  url.py
tests/libs/testing_clients/: README.md  fixtures.py
